flux-parser/src/grammar/snapshots/pi_parser__grammar__stmt__tests__parse_var_decl_fcont.snap
---
source: pi-parser/src/grammar/stmt.rs
expression: "&parse.debug_tree()"
---
VarDecl@0..9
  PrimitiveType@0..4
    INKw@0..3 "i32"
    Whitespace@3..4 " "
  IdentExpr@4..5 "y"
  Whitespace@5..6 " "
  Eq@6..7 "="
  Whitespace@7..9 "\n\t"
FluxError { msg: "expected expression lhs", code: UnexpectedToken, primary: ("", None), labels: [("expected expression lhs", Some(Span { range: 9..12, file_id: FileId(0) }))] }
FluxError { msg: "expected `;` after variable declaration", code: UnexpectedToken, primary: ("", None), labels: [("expected `;` after variable declaration", Some(Span { range: 9..12, file_id: FileId(0) }))] }
